--- a/_lessons/101.html
+++ b/_lessons/101.html
@@ -1,6 +1,6 @@
 ---
 layout: presentation
-title: Applying software engineering concepts to analytics
+title: Who is an analytics engineer?
 lesson: 101
 ---
 
