--- a/_lessons/207.html
+++ b/_lessons/207.html
@@ -34,7 +34,7 @@ class: title, center, middle
 - Table
 - View
 - Ephemeral
-- <span style="background: yellow;">Incremental</span>
+- .highlight[Incremental]
 
 ### Can you write your own? Absolutely!
 
@@ -288,7 +288,7 @@ How can we correctly calculate the _entire_ session?
 - 2.5 months of Snowplow data, 285mm events
 - 99.82% arrive within 1 hr of firing
 - 99.88% within 24 hr
-- <span style="background: yellow;">99.93% within 72 hr</span>
+- .highlight[99.93% within 72 hr]
 ]
 
 ---
