--- a/_lessons/104.html
+++ b/_lessons/104.html
@@ -24,45 +24,15 @@ class: title, center, middle
 
 # Back in the nineties
 
-Data is data is data is data. There isn't a well understood distinction between
-"source" data and "transformed" data. (Secretly, teams of data
-engineers are transforming data all the time, but you wouldn't know it.)
+.left-column-33[
+- Data is data is data is data
+- Fuzzy distinction between "source" and "transformed" data
+- (Secretly, teams of data engineers are running all the pipelines)
+]
 
+.right-column-66[
 <img src="/lessons/img/{{page.lesson}}/fact-dims.png" class="img-center">
-
----
-
-# I'm thinking of a model...
-
-Kimball says:
-1. What is the business process?
-2. What is the grain (primary key)?
-3. What are the "nouns" (dimensions)?
-4. What are the "verbs" (facts)?
-
-Corr says: 7Ws
-- **w**ho
-- **w**hat
-- **w**hen
-- **w**here
-- ho**w** many
-- **w**hy
-- ho**w**
-
----
-
-# Balancing act
-
-Any set of best practices in model design have always needed to balance between
-two competing interests:
-
-- **Intuition:** speed of comprehension for human analysts
-
-- **Performance:** speed of operation for (non-human) database
-
-_As modern data practitioners, we are inheritors of a decades-long history. It
-is our task to determine for the present day which concepts are still necessary, and which
-implementation strategies are still applicable._
+]
 
 ---
 
@@ -83,6 +53,48 @@ implementation strategies are still applicable._
 - Scanning, joining, updating data is expensive
 - Datasets are massive and partitioned
 ]
+
+---
+
+# Balancing act
+
+Any set of best practices in model design have always needed to balance between
+two competing interests:
+
+- **Intuition:** speed of comprehension for human analysts
+
+- **Performance:** speed of operation for (non-human) database
+
+_As modern data practitioners, we are inheritors of a decades-long history. It
+is our task to determine for the present day which concepts are still necessary, and which
+implementation strategies are still applicable._
+
+---
+
+# I'm thinking of a model...
+
+.left-column[
+Kimball says:
+1. What is the business process?
+2. What is the grain (primary key)?
+3. What are the "nouns" (dimensions)?
+4. What are the "verbs" (facts)?
+]
+
+.right-column[
+Corr says: 7Ws
+- **w**ho
+- **w**hat
+- **w**hen
+- **w**here
+- ho**w** many
+- **w**hy
+- ho**w**
+]
+
+???
+- The core concepts for human intuition are the same!
+- The specific implementation strategies are different.
 
 ---
 
@@ -164,10 +176,13 @@ The graph tells a story:
 
 # Interface #2: The Code
 
-Within files: adhere to a style guide
+.left-column[
+- **Within files:** adhere to a style guide
+- **Between files:** better file organization = easier onboarding + better collaboration
+]
 
-Between files: better file organization = easier onboarding + better collaboration
-
+.right-column[
+.dense-text[
 ```
 ├── README.md
 ├── dbt_project.yml
@@ -187,6 +202,8 @@ Between files: better file organization = easier onboarding + better collaborati
             ├── stg_shopify_orders.sql
             └── stg_shopify_products.sql
 ```
+]
+]
 
 ---
 
@@ -200,7 +217,9 @@ find, and easy to infer contents?
 - Who is your end user? Is it a person writing SQL, or a BI tool pointed to a production schema?
 ]
 
-<img src="/lessons/img/{{page.lesson}}/mode-sidebar.png" style="width: 30%; float: right;">
+.right-column-33[
+<img src="/lessons/img/{{page.lesson}}/mode-sidebar.png" style="width: 60%;" class="img-center">
+]
 
 ---
 
@@ -209,7 +228,7 @@ class: subtitle, center, middle
 
 ---
 
-# [How we structure our dbt projects](https://discourse.getdbt.com/t/how-we-structure-our-dbt-projects/355)
+## [The Discourse](https://discourse.getdbt.com/t/how-we-structure-our-dbt-projects/355)
 
 <img src="/lessons/img/{{page.lesson}}/discourse-stats.png" class="img-center">
 &nbsp;
@@ -223,15 +242,17 @@ class: subtitle, center, middle
 .left-column-33[
 ### stg_
 - 1:1 with raw data tables
+- **Source**-conformed
 - Renaming, type casting, coalescing + nullif’ing
-- Views!
+- Views!*
 ]
 
 .right-column-66[
 .left-column[
 ### dim_
 - “Nouns”
-- Customers, products, apartments, providers, employees
+- Core **business** entities
+- Customers, products, apartments, providers, employees, ...
 - Some "slowly-changing" attributes (e.g. address, email)
 - Tables!
 ]
@@ -239,10 +260,10 @@ class: subtitle, center, middle
 .right-column[
 ### fct_
 - “Verbs”
-- Core business process
+- Core **business** processes
+- Orders, cases, plays, listings, comments, ...
 - Often built on top of an immutable event stream
-- Orders, cases, plays, listings, comments
-- Tables (maybe incremental)
+- Tables (maybe incremental)*
 ]]]
 
 ---
@@ -254,7 +275,7 @@ class: subtitle, center, middle
 ### __[transformed]
 - Intermediate models accomplishing a transformation step
 - Not meant for public consumption
-- orders__amortized
+- `orders__amortized`
 - Views (can be tables if more performant)
 - Different schema?
 ]
@@ -264,7 +285,9 @@ class: subtitle, center, middle
 ### utils, lookups, seeds
 - Handy-dandy tables to make your life easier
 - Calendars: days/months, retail, biz hours
-- Mapping tables (country codes --> region, products --> plans)
+- Mapping tables
+	- country codes --> region
+	- products --> plans
 ]
 
 .right-column[
@@ -284,9 +307,9 @@ class: subtitle, center, middle
 &rarr;
 <span style="color: grey; font-size: 60%;">[intermediate, lookup, utils]</span>
 &rarr;
-<span style="color: purple;">fct</span>
-&harr;
-<span style="color: navy;">dim</span></h3>
+<span style="color: purple;">{fct</span>
++
+<span style="color: navy;">dim}</span></h3>
 
 <img src="/lessons/img/{{page.lesson}}/dag-grouped.png" style="width: 100%;">
 
@@ -297,29 +320,7 @@ be grouped together in all three interfaces.
 
 ---
 
-# Unofficial rules of thumb
-
-1. Nomenclature is _hard_, and it's worth your time to be consistent. It doesn't
-matter if you prefer `fct_` or `fact_`, it's important that you choose one. (What's not hard?
-Every model/object name is snake case + case insensitive.)
-2. Prefixed models represent usable assets. Double underscores represent private/internal methods.
-3. Individual models should max out at a half-dozen CTEs / few hundred lines of SQL.
-4. Model code should seek to be DRY (Don't Repeat Yourself) and easily readable. Use
-Jinja + macros strongly and sparingly.
-5. Final models (facts + dimensions) are multipotent, and each can power several
-queries. Your end user (or BI tool) should be able to answer 80% of its most common
-questions by querying 1 table. Of the reamining 20%, no query (outside of _truly_ ad hoc
-analysis) should need more than two join "steps."
-6. Dimensional modeling _is_ feature engineering. Analysts, BI users, and
-data scientists all can and should be beneficiaries of the same foundational work.
-
-???
-In other people's naming, the "semantic" layer ~ our staging layer
-I think about join "steps" as degrees of Kevin Bacon
-
----
-
-class: subtitle
+class: subtitle, center, middle
 # So what are BI tools for, anyway?
 
 ???
@@ -365,14 +366,16 @@ so much for their BI tool??
 - Best agreed-on version of a model
 - Complex SQL
 - No wasted code! Everything is multipurpose*
+- Anything worth version control
 ]
 
 .right-column[
 ## BI layer
-- Aggregations (esp. `distinct`)
-- Joins qualified by a parameter (user input)
-- Specific, one-off "models"
-- Select-star SQL + R, Python, JS (custom viz)
+- Aggregations, calculated on the fly
+- Joins qualified by user input
+- Ad hoc queries and proto-models
+- Select-star SQL that feeds R, Python, JS (custom viz)
+- Nothing you can't take with you
 ]
 
 ???
@@ -408,7 +411,96 @@ group by 1,2
 
 # Who can write that SQL?
 
-<img src="/lessons/img/{{page.lesson}}/bi-logos.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/bi-logos.png" style="width: 40%;" class="img-center">
+---
+
+class: subtitle, middle, center
+# CODA: Some Rules of Thumb
+## or, 
+## how I learned to stop worrying and love my models
+### long opinions<br>quickly felled<br>unofficially compiled<br>by yours truly
+
+???
+This is a very special section, for anyone in the room who feels like the
+presentation thus far has been too _descriptive_ ("what's hard about modeling?") and not
+_prescriptive_ enough ("ok great, now _what should I do?_")
+
+---
+
+1. **Nomenclature** is _hard_, and it's worth your time to be consistent. It doesn't
+matter if you prefer `fct_` or `fact_`, it's important that you choose one. (What's not hard?
+Every model/object name is snake case + case insensitive.)
+---
+1. .grey[**Nomenclature.**]
+2. **Public vs. Private.** Internal Prefixed models represent external/usable assets. Double underscores represent internal/intermediate assets.
+---
+1. .grey[**Nomenclature.**]
+2. .grey[**Public vs. Private.**]
+3. **Modular model files:** Individual models should max out at a half-dozen 
+CTEs / few hundred lines of SQL. The CTEs should be named such that they narrate 
+the model's transformation. If one model file is getting too long, split it up
+into multiple ephemeral models.
+---
+1. .grey[**Nomenclature.**]
+2. .grey[**Public vs. Private.**]
+3. .grey[**Modular model files.**]
+4. **Macros in moderation:** Model code should seek to be _both_ DRY (Don't 
+Repeat Yourself) _and_ easily readable. Use Jinja + macros strongly and sparingly.
+---
+1. .grey[**Nomenclature.**]
+2. .grey[**Public vs. Private.**]
+3. .grey[**Modular model files.**]
+4. .grey[**Macros in moderation.**]
+5. **Reusable assets:** Final models (facts + dimensions) should be multipotent, 
+such that each can power an entire genre of potential queries. Your end user 
+or BI tool should be able to answer 80% of its most common questions by 
+querying **one (1)** table. Of the remaining 20%, no regularly running query 
+should require more than two join "steps." As soon as an ad hoc query is run
+often, it should be refactored and modeled for accordingly.
+---
+1. .grey[**Nomenclature.**]
+2. .grey[**Public vs. Private.**]
+3. .grey[**Modular model files.**]
+4. .grey[**Macros in moderation.**]
+5. .grey[**Reusable assets.**]
+6. **Documentation, documentation, documentation:** Your data models are your
+product; the BI/query layer is your user experience. Having an untested, 
+undocumented model is worse than having no model at all.
+<br>
+<br>
+_Corollary:_ Uncommented, unvetted, unreadable SQL—however clever 
+it may be—is _much_ worse than having no code at all.
+
+---
+1. .grey[**Nomenclature.**]
+2. .grey[**Public vs. Private.**]
+3. .grey[**Modular model files.**]
+4. .grey[**Macros in moderation.**]
+5. .grey[**Reusable assets.**]
+6. .grey[**Documentation, documentation, documentation.**]
+7. **Be your own best advocate:** Your dimensional modeling is your colleague's 
+feature engineering is your stakeholder's reconciliation of business definitions. 
+Analysts, BI users, business partners, and data scientists all can and should be 
+beneficiaries of the foundational work you're doing.
+<br>
+<br>
+_Corollary:_ If they expend effort defining the same concepts on their own,
+it's not only repeated work, but fertile ground for entropy at your organization.
+
+???
+I think about join "steps" as degrees of Kevin Bacon
+---
+1. .grey[**Nomenclature.**]
+2. .grey[**Public vs. Private.**]
+3. .grey[**Modular model files.**]
+4. .grey[**Macros in moderation.**]
+5. .grey[**Reusable assets.**]
+6. .grey[**Documentation, documentation, documentation.**]
+6. .grey[**Be your own best advocate.**]
+
+# YMMV!
+Take it in good health, and with many grains of salt.
+
 ---
 name: working-session
 class: subtitle
