--- a/_lessons/204.html
+++ b/_lessons/204.html
@@ -92,11 +92,6 @@ Optimized for:
 - Reads and writes
 - Thousands of concurrent queries
 
-Examples:
-- Get one user’s email address
-- Add seven items to a user’s cart
-- Change a user’s last name
-
 In this category:
 - Postgres
 - MySQL
@@ -105,6 +100,11 @@ In this category:
 ]
 
 .right-column[
+For instance:
+- Get one user’s email address
+- Add seven items to a user’s cart
+- Change a user’s last name
+
 ```sql
 select *
 fom products
@@ -118,13 +118,10 @@ where trending = true
 
 # Analytic Databases
 
+.left-column[
 Optimized for:
 - "Analytical" queries
-- Importing and exporting data
-
-For instance:
-- Number of distinct users in Ohio are over 38 years young
-- Rolling 14d average of pageviews per day for the last five years
+- Importing and exporting data in batches
 
 In this category:
 
@@ -133,6 +130,13 @@ In this category:
 - Google BigQuery
 - Azure SQL Data Warehouse
 - ....
+]
+
+.right-column[
+For instance:
+- Number of distinct users in Ohio are over 38 years young
+- Rolling 14d average of pageviews per day for the last five years
+]
 
 ---
 
@@ -141,13 +145,11 @@ In this category:
 | db            | Latency       | Concurrent Queries | Rows Scanned / Query |
 |---------------|---------------|--------------------|----------------------|
 | Transactional | ~milliseconds | ~thousands         | ~thousands*          |
-| Analytical    | ~seconds      | ~dozens            | >> millions          |
+| Analytic    | ~seconds      | ~dozens            | >> millions          |
 
---
+---
 
-&nbsp;
-
-### What's in a name?
+# What's in a name?
 
 .left-column[
 Transactional Database, a.k.a.:
@@ -159,7 +161,7 @@ Transactional Database, a.k.a.:
 ]
 
 .right-column[
-Analytical Database, a.k.a.:
+Analytic(al) Database, a.k.a.:
 - Data Warehouse
 - Columnar Database
 - Column-oriented, Column Store
@@ -169,9 +171,8 @@ Analytical Database, a.k.a.:
 
 ---
 
-# Which one is right?
+# Which one is right? (Both!)
 
-Both!
 - Power your application with a transactional database
 - Analyze data with an analytical database
 
